# saker

./: .gitignore  .travis.yml  CHANGLOG.md  CMakeLists.txt  COPYRIGHT  README.md  THANKS.md  THANKS.txt  TODO.md  TODO.txt  build.sh
docs/: Question.txt  Saker.docx  挂载进程的形式.txt
docs/sakerweb/: sakerweb.conf  sakerweb.py
docs/sakerweb/api/: content.html  sysinfo_leftbar.html
docs/sakerweb/static/assets/img/: Thumbs.db
docs/sakerweb/templates/: svinfo.html
example/angell/: angell.conf  angell.lua
example/supervised/: angell.lua  example_full.svr  example_mini.svr
misc/: admin.bat  admin.sh  install.sh  sakerd.init
script/: Angell.lua  Design.json  adopt_example.lua  args_example.lua  defer_example.lua  errlog_example.lua  fileinfo_example.lua  json_example.lua  listdir_example.lua  md5_example.lua  pidof_example.lua  procinfo.lua  publish_example.lua  remotecall_example.lua  sysinfo_proc.lua  tailf.lua  test_mem.lua  uuid_example.lua  walk.example.lua
script/bak/: exec_example.lua  json_example.lua  listdir_example.lua  publish_example.lua
script/script-bak-2/: Angell.lua  ModuleAppsForLinux.json  ModuleAppsForWin.json  app.sh  args_example.lua  defer_example.lua  dll_example.lua  fileinfo_example.lua  md5_example.lua  pidof_example.lua  procinfo.lua  redis_example.lua  remotecall_example.lua  sysinfo_proc.lua  tailf.lua  test_mem.lua  uuid_example.lua  walk.example.lua
script/script-bak-2/bak/: Angell.lua  args_example.lua  defer_example.lua  md5_example.lua  remotecall_example.lua  sysinfo_proc.lua  tailf.lua  uuid_example.lua  walk.example.lua
src/: CMakeLists.txt  config.c  config.h  luaworking.c  luaworking.h  saker.c  saker.h  script.c  ulualib.c  ulualib.h
src/client/: CMakeLists.txt  help.h  saker-cli.c
src/common/: common.h  defines.h  platform.h  types.h  winfixes.h
src/core/: core_adopt.c  core_chdir.c  core_copyfile.c  core_declarer.h  core_exec.c  core_fileinfo.c  core_getcwd.c  core_getuid.c  core_isabsolute.c  core_isdir.c  core_isfile.c  core_islink.c  core_kill.c  core_listdir.c  core_log.c  core_lualib.c  core_md5.c  core_mkdir.c  core_pidof.c  core_platform.c  core_popen.c  core_rmdir.c  core_sleep.c  core_uuid.c  core_walk.c
src/luacompat/: compat52.c  luacompat52.h
src/plugins/: cjson.c  cmsgpack.c  lua-hiredis.c
src/proto/: client.c  client.h  commands.c  commands.h  networking.c  object.c  object.h  pubsub.c  pubsub.h
src/service/: register.c  register.h  sv_lualib.c
src/sysinfo/: sysinfo.c  sysinfo.h  sysinfo_lualib.c  top.h  topbase.c
src/sysinfo/linux/: boottime.c  cpu.c  diskspace.c  kernel.c  memory.c  net.c  proc.c  top.c  uptime.c
src/sysinfo/windows/: boottime.c  cpu.c  diskspace.c  kernel.c  memory.c  net.c  proc.c  top.c  uptime.c
src/utils/: cencode.c  cencode.h  debug.c  debug.h  error.c  error.h  file.c  file.h  getopt.c  getopt.h  logger.c  logger.h  md5.c  md5.h  path.c  path.h  perf.c  perf.h  process.c  process.h  sds.c  sha1.c  strbuf.c  strbuf.h  string.c  string.h  thread.c  thread.h  time.c  time.h  udict.c  udict.h  ulist.h  uuid.c  uuid.h  xsds.h  xstring.c  xstring.h
tools/: AStyle.bat  admin.bat  admin.sh  client.py  client2.py  memcheck.sh  memcheckhelper.sh  pkg.sh  smapsReader.sh  复件 client.py
web/: sakerweb.conf  sakerweb.py
web/api/: index.html  leftbar.html  sysinfo_content.html
web/static/js/: sakerweb.js
web/templates/: base.html  index.html  svhistory.html  svinfo.html  svlife.html
